# zebra

./: .gitignore  .gitmodules  .travis.yml  README.md  cabal.project
.github/: dependabot.yml
.github/workflows/: haskell.yml
zebra-cli/: ambiata-zebra-cli.cabal
zebra-cli/main/: zebra.hs
zebra-cli/src/Zebra/: Command.hs
zebra-cli/src/Zebra/Command/: Adapt.hs  Consistency.hs  Export.hs  Import.hs  Merge.hs  Summary.hs  Util.hs
zebra-cli/test/cli/import/: run
zebra-cli/test/cli/merge/: run
zebra-core/: ambiata-zebra-core.cabal
zebra-core/csrc/: zebra_block_split.c
zebra-core/src/Zebra/Factset/: Data.hs  Fact.hs
zebra-core/src/Zebra/Factset/Block/: Block.hs  Index.hs
zebra-core/src/Zebra/Foreign/: Block.hs  Entity.hs  Merge.hs  Table.hs  Util.hs
zebra-core/src/Zebra/Merge/: BlockC.hs  Table.hs
zebra-core/src/Zebra/Merge/Puller/: File.hs  List.hs
zebra-core/src/Zebra/Serial/Binary/: Array.hs  File.hs  Header.hs  Logical.hs  Striped.hs  Table.hs
zebra-core/src/Zebra/Serial/Json/: Util.hs
zebra-core/src/Zebra/Serial/Text/: Logical.hs  Striped.hs
zebra-core/src/Zebra/Table/: Logical.hs  Schema.hs  Striped.hs
zebra-core/src/Zebra/X/: Either.hs  Stream.hs  WrappedResourceT.hs
zebra-core/src/Zebra/X/Vector/: Generic.hs
zebra-core/test/: ambiata-zebra-core-test.cabal  test.hs
zebra-core/test/Test/Zebra/: Jack.hs  Time.hs  Util.hs
zebra-core/test/Test/Zebra/Factset/: Block.hs  Data.hs
zebra-core/test/Test/Zebra/Foreign/: Block.hs  Entity.hs  Merge.hs  Table.hs
zebra-core/test/Test/Zebra/Merge/: Entity.hs  Table.hs
zebra-core/test/Test/Zebra/Serial/Binary/: Array.hs  Block.hs  File.hs  Header.hs  Logical.hs  Striped.hs  Table.hs
zebra-core/test/Test/Zebra/Serial/Json/: Logical.hs  Schema.hs  Striped.hs  Util.hs
zebra-core/test/Test/Zebra/Serial/Text/: Logical.hs  Schema.hs  Striped.hs
zebra-core/test/Test/Zebra/Table/: Logical.hs  Schema.hs  Striped.hs
