name:                  ambiata-zebra-cli
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           CLI for operating on zebra files

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      >= 0.10
                    , containers                      == 0.5.*
                    , exceptions                      >= 0.10
                    , mmorph                          >= 1.0
                    , pretty-show                     == 1.6.*
                    , resourcet                       >= 1.1
                    , semigroups                      >= 0.18
                    , text                            == 1.2.*
                    , transformers                    == 0.5.*
                    , transformers-either
                    , concurrent-output               >= 1.6        && < 1.11
                    , vector                          >= 0.11       && < 0.13

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra.Command
                    Zebra.Command.Adapt
                    Zebra.Command.Consistency
                    Zebra.Command.Export
                    Zebra.Command.Import
                    Zebra.Command.Merge
                    Zebra.Command.Summary
                    Zebra.Command.Util


executable zebra
  if impl(ghc >= 8.0)
    ghc-options:
                    -Wall -threaded -rtsopts "-with-rtsopts=-A128m -n4m"
  else
    ghc-options:
                    -Wall -threaded -rtsopts "-with-rtsopts=-A128m -n4m -qg"

  hs-source-dirs:
                    main

  main-is:
                    zebra.hs

  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-optparse
                    , ambiata-x-vector
                    , ambiata-zebra-cli
                    , ambiata-zebra-core
                    , binary
                    , bytestring
                    , containers
                    , mmorph
                    , optparse-applicative
                    , pretty-show
                    , resourcet
                    , semigroups
                    , text
                    , transformers
                    , transformers-either

  other-modules:
                    Paths_ambiata_zebra_cli

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
