name:                  ambiata-zebra-core
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Zebra Library

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-snapper
                    , ambiata-viking
                    , ambiata-x-bytestring
                    , ambiata-x-show
                    , ambiata-x-vector
                    , aeson                           >= 1.0        && < 1.5
                    , aeson-pretty                    == 0.8.*
                    , async
                    , attoparsec                      >= 0.13       && < 0.14
                    , base64-bytestring               == 1.0.*
                    , bifunctors                      >= 4.2        && < 5.6
                    , binary                          >= 0.7.2      && < 0.9
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.26
                    , bytestring                      >= 0.1
                    , containers                      >= 0.5
                    , exceptions                      >= 0.10       && < 0.11
                    , ghc-prim                        >= 0.4        && < 0.6
                    , lens                            >= 4.7
                    , mmorph                          >= 1.1
                    , mtl                             >= 2.2
                    , old-locale                      == 1.0.*
                    , pretty-show                     == 1.6.*
                    , primitive                       >= 0.6
                    , random                          == 1.1.*
                    , resourcet                       >= 1.2
                    , semigroups                      >= 0.18
                    , streaming                       >= 0.1        && < 0.3
                    , streaming-bytestring            >= 0.1        && < 0.3
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    == 0.5.*
                    , transformers-either
                    , unordered-containers            == 0.2.*
                    , vector                          >= 0.11       && < 0.13
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra.Factset.Block
                    Zebra.Factset.Block.Block
                    Zebra.Factset.Block.Entity
                    Zebra.Factset.Block.Index
                    Zebra.Factset.Data
                    Zebra.Factset.Entity
                    Zebra.Factset.Fact
                    Zebra.Factset.Table

                    Zebra.Foreign.Bindings
                    Zebra.Foreign.Block
                    Zebra.Foreign.Entity
                    Zebra.Foreign.Merge
                    Zebra.Foreign.Serial
                    Zebra.Foreign.Table
                    Zebra.Foreign.Util

                    Zebra.Merge.Base
                    Zebra.Merge.Block
                    Zebra.Merge.BlockC
                    Zebra.Merge.Entity
                    Zebra.Merge.Puller.File
                    Zebra.Merge.Puller.List
                    Zebra.Merge.Table

                    Zebra.Serial.Binary
                    Zebra.Serial.Binary.Array
                    Zebra.Serial.Binary.Block
                    Zebra.Serial.Binary.Data
                    Zebra.Serial.Binary.File
                    Zebra.Serial.Binary.Header
                    Zebra.Serial.Binary.Logical
                    Zebra.Serial.Binary.Striped
                    Zebra.Serial.Binary.Table

                    Zebra.Serial.Json
                    Zebra.Serial.Json.Logical
                    Zebra.Serial.Json.Schema
                    Zebra.Serial.Json.Striped
                    Zebra.Serial.Json.Util

                    Zebra.Serial.Text
                    Zebra.Serial.Text.Logical
                    Zebra.Serial.Text.Schema
                    Zebra.Serial.Text.Striped

                    Zebra.Table.Data
                    Zebra.Table.Encoding
                    Zebra.Table.Logical
                    Zebra.Table.Schema
                    Zebra.Table.Striped

                    Zebra.Time

                    Zebra.X.Either
                    Zebra.X.Stream
                    Zebra.X.Vector.Generic
                    Zebra.X.Vector.Segment
                    Zebra.X.Vector.Storable

  include-dirs:
                       csrc

  install-includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h

  includes:
                       zebra_append.h
                       zebra_block_split.h
                       zebra_clone.h
                       zebra_data.h
                       zebra_grow.h
                       zebra_hash.h
                       zebra_merge.h
                       zebra_merge_many.h
                       zebra_unpack.h


  c-sources:
                       csrc/zebra_append.c
                       csrc/zebra_block_split.c
                       csrc/zebra_clone.c
                       csrc/zebra_grow.c
                       csrc/zebra_merge.c
                       csrc/zebra_merge_many.c
                       csrc/zebra_unpack.c

  cc-options:
                       -std=c99 -ggdb -msse4.2 -Wall -Werror -Wuninitialized -Wno-unused-command-line-argument -DCABAL=1

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary
                    , bytestring
                    , containers
                    , exceptions
                    , hedgehog                    >= 1.0
                    , hedgehog-corpus
                    , hedgehog-quickcheck
                    , mmorph
                    , pretty-show
                    , quickcheck-instances
                    , resourcet
                    , semigroups
                    , text
                    , thyme
                    , time
                    , transformers
                    , transformers-either
                    , vector
  other-modules:
                      Test.Zebra.Factset.Block
                      Test.Zebra.Factset.Data
                      Test.Zebra.Foreign.Block
                      Test.Zebra.Foreign.Entity
                      Test.Zebra.Foreign.Merge
                      Test.Zebra.Foreign.Table
                      Test.Zebra.Jack
                      Test.Zebra.Merge.Entity
                      Test.Zebra.Merge.Table
                      Test.Zebra.Serial.Binary.Array
                      Test.Zebra.Serial.Binary.Block
                      Test.Zebra.Serial.Binary.File
                      Test.Zebra.Serial.Binary.Header
                      Test.Zebra.Serial.Binary.Logical
                      Test.Zebra.Serial.Binary.Striped
                      Test.Zebra.Serial.Binary.Table
                      Test.Zebra.Serial.Json.Logical
                      Test.Zebra.Serial.Json.Schema
                      Test.Zebra.Serial.Json.Striped
                      Test.Zebra.Serial.Json.Util
                      Test.Zebra.Serial.Text.Logical
                      Test.Zebra.Serial.Text.Schema
                      Test.Zebra.Serial.Text.Striped
                      Test.Zebra.Table.Logical
                      Test.Zebra.Table.Striped
                      Test.Zebra.Table.Schema
                      Test.Zebra.Time
                      Test.Zebra.Util