name:                  ambiata-zebra-core-test
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
build-type:            Simple
synopsis:              zebra
category:              System
description:           Zebra Test Generators
cabal-version:         >= 1.8

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary
                    , bytestring
                    , containers
                    , exceptions
                    , pretty-show
                    , QuickCheck
                    , quickcheck-instances
                    , text
                    , thyme
                    , transformers
                    , transformers-either
                    , vector

  exposed-modules:
                    Test.Zebra.Jack
